[package]
name = "two-factor-auth"
version = "0.1.1"
edition = "2021"
authors = ["haihuiling2014@gmail.com"]
repository = "https://github.com/bujnlc8/two-factor-auth"
description = "Simple CLI to generate two-factor-auth token compatible with Google Authenticator"
license = "MIT"
keywords = ["two-factor-auth", "google-authenticator"]

[dependencies]
hmac-sha1 = "0.1.3"
base32 = "0.4.0"


[[bin]]
name = "2fa"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
opt-level = "z"
